BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE INSUMOS.DM_CAUSAS CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

-- Tabla DM_CAUSAS
CREATE TABLE INSUMOS.DM_CAUSAS (
    ID VARCHAR2(50) PRIMARY KEY,
    CAUSA VARCHAR2(255),
    CAUSA_HOMOLOGADA VARCHAR2(255),
    FECHA_LOTE TIMESTAMP,
    ID_USUARIO_SISTEMA VARCHAR2(50)
);