BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE INSUMOS.DM_ETIQUETA_SINIESTRO CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

-- Tabla DM_ETIQUETA_SINIESTRO (con referencias a DM_SINIESTROS)
CREATE TABLE INSUMOS.DM_ETIQUETA_SINIESTRO (
    ID VARCHAR2(50) PRIMARY KEY,
    ID_REPORTE VARCHAR2(50),
    ID_SINIESTRO VARCHAR2(50),
    CODIGO_ESTATUS VARCHAR2(50),
    FECHA_INVESTIGACION DATE,
    TEXTO_INVESTIGACION VARCHAR2(4000),
    USUARIO_INVESTIGACION VARCHAR2(255),
    TEXTO_LOCALIZADO VARCHAR2(4000),
    FECHA_LOCALIZADO DATE,
    FECHA_CARGA DATE,
    FECHA_LOTE DATE,
    ID_USUARIO_SISTEMA VARCHAR2(50),
    CONSECUTIVO NUMBER(19),
    VALIDO_DESDE DATE,
    VALIDO_HASTA DATE,
    VALIDO NUMBER(1)
);