BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE INSUMOS.DM_PAGOS_POLIZAS CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

CREATE TABLE INSUMOS.DM_PAGOS_POLIZAS (
    ID VARCHAR2(50) PRIMARY KEY,
    FECHA_VENCIMIENTO DATE,
    POLIZA VARCHAR2(50),
    ENDOSO VARCHAR2(50),
    POLIZA_ENDOSO VARCHAR2(100),
    IMPORTE NUMBER,
    REMESA VARCHAR2(50),
    MARCA_IMP DATE,
    MARCA_ANUL DATE,
    PRIMA_NETA NUMBER,
    DERECHO_POLIZA NUMBER,
    RECIBO_FIN NUMBER,
    IVA NUMBER,
    BONIFICACION NUMBER,
    BONIFICACION_RF NUMBER,
    BONIFICACION_TEC NUMBER,
    PRIMA_TOTAL NUMBER,
    USUARIO_APLICA VARCHAR2(50),
    FECHA_APLICACION DATE,
    RFC_FACTURACION VARCHAR2(256),
    USUARIO_EMITE VARCHAR2(50),
    STATUS VARCHAR2(10),
    FECHA_PROCESO DATE,
    FECHA_CARGA TIMESTAMP
);