BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE RAW_INSUMOS.DM_COBERTURAS_MOVIMIENTOS CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

CREATE TABLE RAW_INSUMOS.DM_COBERTURAS_MOVIMIENTOS (
    ID VARCHAR2(4000),
    RAMO VARCHAR2(4000),
    SUBRAMO VARCHAR2(4000),
    SINIESTRO VARCHAR2(4000),
    TIPO_SINIESTRO VARCHAR2(4000),
    ID_OFICINA_VENTAS VARCHAR2(4000),
    GERENTE VARCHAR2(4000),
    AGENTE VARCHAR2(4000),
    ID_OFICINA_DE_ATENCION VARCHAR2(4000),
    AJUSTADOR VARCHAR2(4000),
    FECHA_REGISTRO DATE,
    FECHA_MOVIMIENTO DATE,
    TIPO_MOVIMIENTO VARCHAR2(4000),
    GASTO VARCHAR2(4000),
    TIPO_MONEDA VARCHAR2(4000),
    COBERTURA VARCHAR2(4000),
    IMPORTE NUMBER,
    CAPUFE NUMBER,
    CODIGO_COBERTURA VARCHAR2(4000),
    CODIGO_TEXTO VARCHAR2(4000),
    TIPO_CAMBIO NUMBER,
    REPORTE VARCHAR2(4000),
    USUARIO VARCHAR2(4000),
    POLIZA VARCHAR2(4000),
    RELEVANTES VARCHAR2(4000),
    FECHA_OCURRIDO DATE,
    TIPO_VEHICULO VARCHAR2(4000),
    MODELO_VEHICULO VARCHAR2(4000),
    CSTROS NUMBER,
    CRVA_INICIAL NUMBER,
    IRVA_INICIAL NUMBER,
    CAJMAS NUMBER,
    IAJMAS NUMBER,
    CAJMENOS NUMBER,
    IAJMENOS NUMBER,
    CPAGOS NUMBER,
    IPAGOS NUMBER,
    CGASTO NUMBER,
    IGASTO NUMBER,
    CDED NUMBER,
    IREC NUMBER,
    CSALV NUMBER,
    ISALV NUMBER,
    FLAG_REC VARCHAR2(4000),
    COD_RESP VARCHAR2(4000),
    DEPRES1 VARCHAR2(4000),
    DEPRES2 VARCHAR2(4000),
    DEPRES3 VARCHAR2(4000),
    DEPRESLIT VARCHAR2(4000),
    MONTO_INDEM_RECUP NUMBER,
    MONTO_INDEM_RECUP_DM NUMBER,
    IMPORTE_MN NUMBER,
    IRVA_INICIAL_MN NUMBER,
    IAJMASMN NUMBER,
    IAJMENOSMN NUMBER,
    IPAGOSMN NUMBER,
    IGASTOMN NUMBER,
    IDEDMN NUMBER,
    IRECMN NUMBER,
    ISALVMN NUMBER,
    MARCA_RVA VARCHAR2(4000),
    COAS NUMBER,
    NOMBRE_ASEGURADORA VARCHAR2(4000),
    CODIGO_POBLACION_ACC VARCHAR2(4000),
    REC_CANTO NUMBER,
    INVSALV VARCHAR2(4000),
    CODIGO_ESTADO_ACC VARCHAR2(4000),
    SINIESDIA NUMBER,
    CLAVE_ABOGADO VARCHAR2(4000)
);