BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE RAW_INSUMOS.DM_OFICINAS CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

-- Tabla DM_OFICINAS
CREATE TABLE RAW_INSUMOS.DM_OFICINAS (
    ID VARCHAR2(50) ,
    OFICINA VARCHAR2(100),
    DIRECCION VARCHAR2(255),
    COLONIA VARCHAR2(100),
    POBLACION VARCHAR2(100),
    CODIGO_POBLACION VARCHAR2(50),
    CODIGO_POSTAL VARCHAR2(20),
    ZONA VARCHAR2(100)
);