BEGIN
   EXECUTE IMMEDIATE 'DROP TABLE RAW_INSUMOS.DM_PROVEEDORES CASCADE CONSTRAINTS';
EXCEPTION
   WHEN OTHERS THEN
      IF SQLCODE != -942 THEN
         RAISE;
      END IF;
END;

-- Tabla DM_PROVEEDORES
CREATE TABLE RAW_INSUMOS.DM_PROVEEDORES (
    ID VARCHAR2(50),
    NOMBRE VARCHAR2(255),
    MARCA VARCHAR2(100),
    TIPO VARCHAR2(100),
    OFICINA VARCHAR2(100),
    SUSPENCION VARCHAR2(100),
    STATUS VARCHAR2(50),
    FECHA_BAJA DATE,
    CODIGO_ESTADO VARCHAR2(50),
    POBLACION VARCHAR2(100),
    DIRECCION VARCHAR2(255),
    DIRECCION_COMER VARCHAR2(255),
    COLONIA_COMER VARCHAR2(100),
    POBLACION_COMER VARCHAR2(100),
    ESTADO_COMER VARCHAR2(100),
    NUMERO_DOCTO VARCHAR2(100),
    NOMBRE_COMER VARCHAR2(255),
    GRUPO VARCHAR2(100),
    FECHA_ALTA DATE,
    CTA_ESP VARCHAR2(100),
    TIPO_AJUSTE VARCHAR2(100),
    TIPO_MARCA VARCHAR2(100),
    RFC VARCHAR2(50),
    CORREO_COMERCIAL VARCHAR2(255),
    CORREO_CONTACTO VARCHAR2(255),
    CORREO_COMERCIAL_2 VARCHAR2(255),
    MARCA_MOTOS VARCHAR2(100),
    TELEFONO_SIICA VARCHAR2(50),
    AE NUMBER(19),
    LATITUD VARCHAR2(50),
    LONGITUD VARCHAR2(50),
    RECIBE_24 VARCHAR2(10),
    ZONA_PROVEEDOR VARCHAR2(100),
    VED VARCHAR2(50),
    TIPO_PERSONA VARCHAR2(50),
    CEXP NUMBER(19),
    TBODY VARCHAR2(255),
    NUMERO_EMPLEADO VARCHAR2(50)
);