erDiagram

asegurados ||--|{ polizas_vigentes : manejan

polizas_vigentes ||--|{ vehiculos : contienen

polizas_vigentes ||--o{ DM_PAGOS_POLIZAS : realizan

gerentes ||--o{ DM_SINIESTROS : gestionan

vehiculos ||--o{ DM_SINIESTROS : sufren

DM_CAUSAS ||--o{ DM_SINIESTROS : originan

DM_OFICINAS ||--o{ DM_SINIESTROS : gestionan

agentes ||--o{ DM_SINIESTROS : atienden

DM_SINIESTROS ||--o{ DM_ETIQUETA_SINIESTRO : descritos

DM_SINIESTROS ||--o{ DM_COBERTURAS_MOVIMIENTOS : conllevan

DM_SINIESTROS ||--o{ pagos_siniestros : generan

DM_PROVEEDORES {
    string ID PK
    string NOMBRE
    string MARCA
    string TIPO
    string OFICINA
    string SUSPENCION
    string STATUS
    datetime FECHA_BAJA
    string CODIGO_ESTADO
    string POBLACION
    string DIRECCION
    string DIRECCION_COMER
    string COLONIA_COMER
    string POBLACION_COMER
    string ESTADO_COMER
    string NUMERO_DOCTO
    string NOMBRE_COMER
    string GRUPO
    datetime FECHA_ALTA
    string CTA_ESP
    string TIPO_AJUSTE
    string TIPO_MARCA
    string RFC
    string CORREO_COMERCIAL
    string CORREO_CONTACTO
    string CORREO_COMERCIAL_2
    string MARCA_MOTOS
    string TELEFONO_SIICA
    int64 AE
    string LATITUD
    string LONGITUD
    string RECIBE_24
    string ZONA_PROVEEDOR
    string VED
    string TIPO_PERSONA
    int64 CEXP
    string TBODY
    string NUMERO_EMPLEADO
}

asegurados {
    string id PK
    string nombre
    string apellido_paterno
    string apellido_materno
    string fecha_alta
}

polizas_vigentes {
    string id PK
    string id_asegurado
    string poliza
    string ramo
    string endoso
    number prima_neta
    number prima_total
    number iva
    number subtotal
    date fecha_emision
    date vigente_desde
    date vigente_hasta
}

DM_PAGOS_POLIZAS {
    string ID PK
    datetime FECHA_VENCIMIENTO
    string POLIZA
    string ENDOSO
    string POLIZA_ENDOSO
    numeric IMPORTE
    string REMESA
    datetime MARCA_IMP
    datetime MARCA_ANUL
    numeric PRIMA_NETA
    numeric DERECHO_POLIZA
    numeric RECIBO_FIN
    numeric IVA
    numeric BONIFICACION
    numeric BONIFICACION_RF
    numeric BONIFICACION_TEC
    numeric PRIMA_TOTAL
    string USUARIO_APLICA
    datetime FECHA_APLICACION
    string RFC_FACTURACION
    string USUARIO_EMITE
    string STATUS
    datetime FECHA_PROCESO
}


vehiculos {
    string id PK
    string seccion
    string poliza
    string endoso
    string inciso
    string marca_completa
    string marca_corta
    string subramo
    string modelo
    string origen
    string tipo_vehiculo
    string serie
    string placas
    string tipo_cobertura
    string categoria
    string valor_0km
    string suma_aseg
}


DM_CAUSAS {
    string ID PK
    string CAUSA
    string CAUSA_HOMOLOGADA
    datetime FECHA_LOTE
    string ID_USUARIO_SISTEMA FK
}


DM_ETIQUETA_SINIESTRO {
    string ID PK
    string ID_REPORTE FK
    string ID_SINIESTRO FK
    string CODIGO_ESTATUS
    datetime FECHA_INVESTIGACION
    string TEXTO_INVESTIGACION
    string USUARIO_INVESTIGACION
    string TEXTO_LOCALIZADO
    datetime FECHA_LOCALIZADO
    datetime FECHA_CARGA
    datetime FECHA_LOTE
    string ID_USUARIO_SISTEMA FK
    int64 CONSECUTIVO
    datetime VALIDO_DESDE
    datetime VALIDO_HASTA
    boolean VALIDO
}


DM_COBERTURAS_MOVIMIENTOS {
    string ID PK
    string RAMO
    string SUBRAMO
    string SINIESTRO FK
    string TIPO_SINIESTRO
    string ID_OFICINA_VENTAS FK
    string GERENTE
    string AGENTE
    string ID_OFICINA_DE_ATENCION FK
    string AJUSTADOR
    datetime FECHA_REGISTRO
    datetime FECHA_MOVIMIENTO
    string TIPO_MOVIMIENTO
    string GASTO
    string TIPO_MONEDA
    string COBERTURA
    float64 IMPORTE
    int64 CAPUFE
    string CODIGO_COBERTURA
    string CODIGO_TEXTO
    float64 TIPO_CAMBIO
    string REPORTE
    string USUARIO
    string POLIZA
    string RELEVANTES
    datetime FECHA_OCURRIDO
    string TIPO_VEHICULO
    string MODELO_VEHICULO
    int64 CSTROS
    int64 CRVA_INICIAL
    float64 IRVA_INICIAL
    int64 CAJMAS
    float64 IAJMAS
    int64 CAJMENOS
    float64 IAJMENOS
    int64 CPAGOS
    float64 IPAGOS
    int64 CGASTO
    float64 IGASTO
    int64 CDED
    float64 IREC
    int64 CSALV
    float64 ISALV
    string FLAG_REC
    string COD_RESP
    string DEPRES1
    string DEPRES2
    string DEPRES3
    string DEPRESLIT
    float64 MONTO_INDEM_RECUP
    float64 MONTO_INDEM_RECUP_DM
    float64 IMPORTE_MN
    float64 IRVA_INICIAL_MN
    float64 IAJMASMN
    float64 IAJMENOSMN
    float64 IPAGOSMN
    float64 IGASTOMN
    float64 IDEDMN
    float64 IRECMN
    float64 ISALVMN
    string MARCA_RVA
    float64 COAS
    string NOMBRE_ASEGURADORA
    string CODIGO_POBLACION_ACC
    numeric REC_CANTO
    string INVSALV
    string CODIGO_ESTADO_ACC
    int64 SINIESDIA
    string CLAVE_ABOGADO
}

%% PENDIENTE
%%DM_CAUSA_COBERTURA {
%%    string REGLA
%%    string CAUSAS
%%    string COBERTURA
%%    string CODIGO_COBERTURA
%%    datetime FECHA_LOTE
%%    string ID_USUARIO_SISTEMA FK
%%}

pagos_siniestros {
    string id PK
    string id_siniestro FK
    number importe
    date fecha_pago
}

gerentes {
    string id PK
    string nombre
}

DM_OFICINAS {
    string ID PK
    string OFICINA
    string DIRECCION
    string COLONIA
    string POBLACION
    string CODIGO_POBLACION
    string CODIGO_POSTAL
    string ZONA
}

DM_SINIESTROS {
    string ID PK
    string REPORTE
    string POLIZA
    string ENDOSO
    string INCISO
    string ID_POLIZA_ENDOSO
    string ID_POLIZA_ENDOSO_INCISO
    string ASEGURADO
    string ID_ASEGURADO
    string ID_CAUSA
    datetime FECHA_OCURRIDO
    datetime FECHA_REPORTE
    datetime FECHA_REGISTRO
    datetime FECHA_INICIO_VIGENCIA
    string MARCA
    string MODELO
    string SERIE
    numeric SEVERIDAD
    string STATUS
    numeric RESERVA
    string UBICACION
    string ENTIDAD
    string ID_OFICINA
    string LEIDO_SAS
    string ID_OFICINA_DE_ATENCION
    string ID_AJUSTADOR
    string LATITUD
    string LONGITUD
    string CONDUCTOR
    string CODIGO_USO
    string USO
    numeric SUMA_ASEGURADA
    string PLACA
    datetime FECHA_EMISION
    boolean POLIZA_REHABILITADA
    datetime FECHA_FIN_VIGENCIA
    string OBSERVACIONES
    datetime FECHA_LOTE
    string ID_USUARIO_SISTEMA
}

agentes {
    string id PK
    string nombre
}